<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">万年历</string>
    <string name="today">今天</string>
    <string name="prev_month">上一月</string>
    <string name="next_month">下一月</string>
    <string name="sun">日</string>
    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wed">三</string>
    <string name="thu">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="add_event">＋ 添加日程</string>
</resources>
